# docxlate

./: .gitignore  AGENTS.md  DESIGN.md  README.md  config.yaml  pyproject.toml
docs/: 00_index.md  01_getting-started.md  02_configuration.md  03_directives.md  04_architecture.md  05_development.md  06_execution-plan.md  07_todo.md
docs/features/: bibliography.md  figures.md  math.md  tables.md
src/docxlate/: __init__.py  aux.py  bbl.py  bcf.py  citation.py  cli.py  config.py  config_plugins.py  core.py  handlers.py  refs.py  registry.py  utils.py
src/docxlate/docx_ext/: __init__.py  emitter.py  floating.py  hyperlink.py  numbering.py  run_style.py
src/docxlate/extensions/: __init__.py  figures.py  hyperref.py  lists.py  xcolor.py
src/docxlate/extensions/bibliography/: __init__.py  config.py  plugin.py  runtime.py
src/docxlate/extensions/figure/: __init__.py  captioning.py  config.py  handlers.py  macros.py  plugin.py  runtime.py
src/docxlate/extensions/table/: __init__.py  config.py  plugin.py  runtime.py
src/docxlate/model/: __init__.py  emit.py  layout.py  render.py
tests/: conftest.py  test_aux.py  test_bcf.py  test_cli.py  test_inline.py  test_mathml.py
tests/integration/: test_citations.py  test_core_rendering.py  test_figures.py  test_lists.py  test_modes.py  test_references.py  test_style_scope.py  test_tables.py  test_template_styles.py
tests/regression/: test_unknown_macro.py
tests/unit/: test_aux_parser.py  test_bbl_parser.py  test_bcf_parser.py  test_config.py  test_floating_grouping.py  test_math_source.py  test_registry.py
(+9 files in other folders)
